<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".register.RegisterActivity">

 <!--   <include
        android:id="@+id/registerToolBar"
        layout="@layout/common_toolbar"/>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_5dp"
        android:elevation="@dimen/dimen_5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/dimen_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/bt_facebook"
                    android:layout_width="0dp"
                    android:background="@color/white"
                    android:elevation="@dimen/dimen_5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/facebook"
                    android:layout_marginRight="@dimen/dimen_5dp" />

                <Button
                    android:id="@+id/bt_google"
                    android:layout_width="0dp"
                    android:background="@color/white"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:elevation="@dimen/dimen_5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/google"
                    android:layout_marginLeft="@dimen/dimen_5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMobile"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/dimen_14sp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:hint="@string/mobile_number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/dimen_14sp"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:textSize="@dimen/dimen_14sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilInviteCode"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:visibility="gone"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etInviteCode"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:textSize="@dimen/dimen_14sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:hint="@string/invite_code" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bt_next"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/terms_of_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/terms_of_service2"
                    android:layout_marginStart="@dimen/dimen_3dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_3dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>