<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dimGray"
    tools:context=".login.LoginActivity">
<!--
    <include
        android:id="@+id/toolBar"
        layout="@layout/common_toolbar" />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_5dp"
        android:elevation="@dimen/dimen_5dp"
        app:cardCornerRadius="@dimen/dimen_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/bt_facebook"
                    android:layout_width="0dp"
                    android:background="@color/white"
                    android:elevation="@dimen/dimen_5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/facebook"
                    android:layout_marginRight="@dimen/dimen_5dp" />

                <Button
                    android:id="@+id/bt_google"
                    android:layout_width="0dp"
                    android:background="@color/white"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:elevation="@dimen/dimen_5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/google"
                    android:layout_marginLeft="@dimen/dimen_5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:hint="@string/enter_mobile" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bt_next"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:text="@string/next"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dimen_15dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/ll_register"
        app:layout_constraintTop_toBottomOf="@+id/cv_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_not_member"
            android:text="@string/not_member"
            android:textSize="@dimen/dimen_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/register"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>