<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".intro.IntroActivity">

    <Button
        android:id="@+id/btn_lets_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:textColor="@color/colorPrimary"
        android:text="@string/lets_play"
        android:textSize="@dimen/fontSize_button"
        app:layout_constraintBottom_toTopOf="@+id/llLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_register"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/invite_friend"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_14sp" />

        <Button
            android:id="@+id/btn_login"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/already_user"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>